# searchlite

./: .cz.json  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
src/html_search/: mod.rs  tests.rs
tests/: index.html
